# cpu-raytracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  color.hpp  dialectric.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  lambertian.hpp  material.hpp  metal.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
src/: program.cpp
